Fixed header size on mobile
- Updated desktop.scss
- Updated style.scss
- Removed target dir and added it to gitignore

--- a/resources/public/css/desktop.scss
+++ b/resources/public/css/desktop.scss
@@ -158,6 +158,9 @@
   font-size: rems(15px);
 }
 
+.page__header {
+  height: rems(416px);
+}
 .page__title {
   position: absolute;
   bottom: 0;
