--- a/resources/public/css/style.scss
+++ b/resources/public/css/style.scss
@@ -340,7 +340,6 @@ strong {
 }
 .page__header {
   position: relative;
-  height: rems(416px);
   margin-bottom: rems(3px);
 }
 
